# AOC2020

day1/: day1.cabal  package.yaml
day1/app/: Main.hs
day10/: Main.hs
day11/: Main.hs
day12/: Main.hs
day13/: Main.hs
day14/: Main.hs
day15/: Main.hs  Main.py  Main.rs
day16/: day16.cabal
day16/src/: Main.hs
day17/: Main.hs
day18/: day18.cabal
day18/src/: Main.hs
day19/: LICENSE  day19.cabal  stack.yaml
day19/src/: Main.hs
day2/: Main.hs  day2.cabal
day2/src/: Main.hs
day20/: day20.cabal
day20/app/: Main.hs
day21/: day21.cabal
day21/app/: Main.hs
day24/: day24.cabal
day24/app/: Main.hs
day2old/src/: Main.hs
day3/: Main  Main.hi  Main.hs
day4/: Main.hs
day5/: Main.hs
day6/: Main.hs
day7/: Main.hs  exampleInput.txt  input.txt
day8/: Error.html  Main.hs  input.txt
day9/: day9.cabal  package.yaml
day9/app/: Main.hs
