name:                day16
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/lovelyckaro/day16#readme
license:             BSD3
license-file:        LICENSE
author:              Love Lyckaro
maintainer:          love.lyckaro@hotmail.se
copyright:           Love Lyckaro
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable day16
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       megaparsec,
                       containers
